don't use guava for Charsets