@@ -1,8 +1,6 @@
 package org.dcache.chimera;
 
-import com.google.common.base.Charsets;
 import com.google.common.base.Strings;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
 import org.junit.Ignore;
 import org.junit.Test;
@@ -10,7 +8,6 @@ import org.springframework.jdbc.core.JdbcTemplate;
 
 import java.util.*;
 import java.util.concurrent.CountDownLatch;
-import java.nio.charset.StandardCharsets;
 import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -33,6 +30,7 @@ import static org.hamcrest.Matchers.hasEntry;
 import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.*;
 import static org.dcache.chimera.FileSystemProvider.SetXattrMode;
+import static java.nio.charset.StandardCharsets.UTF_8;
 
 public class BasicTest extends ChimeraTestCaseHelper {
 
@@ -98,7 +96,7 @@ public class BasicTest extends ChimeraTestCaseHelper {
     @Test
     public void testMkDirWithTags() throws Exception {
         byte[] bytes = "value".getBytes();
-        FsInode dir1 = _fs.mkdir(_rootInode, "junit", 1, 2, 02755, Collections.emptyList(), ImmutableMap.of("tag", bytes));
+        FsInode dir1 = _fs.mkdir(_rootInode, "junit", 1, 2, 02755, Collections.emptyList(), Map.of("tag", bytes));
         assertThat(_fs.getAllTags(dir1), hasEntry("tag", bytes));
     }
 
@@ -259,6 +257,7 @@ public class BasicTest extends ChimeraTestCaseHelper {
         try {
             fileInode.create("anObject", 0, 0, 0644);
             fail("you can't create an  object in file Inode");
+            fail("you can't create an  object in file Inode");
         } catch (NotDirChimeraException nde) {
             // OK
         }
@@ -373,7 +372,7 @@ public class BasicTest extends ChimeraTestCaseHelper {
 
         FsInode linkBase = _rootInode.mkdir("links");
 
-        _fs.createLink(linkBase, "file123", 0, 0, 0644, "/files/file123".getBytes(Charsets.UTF_8));
+        _fs.createLink(linkBase, "file123", 0, 0, 0644, "/files/file123".getBytes(UTF_8));
         _fs.remove("/links/file123");
     }
 
@@ -384,7 +383,7 @@ public class BasicTest extends ChimeraTestCaseHelper {
         FsInode linkBase = _rootInode.mkdir("links");
         FsInode fileInode = fileBase.create("file123", 0, 0, 0644);
 
-        _fs.createLink(linkBase, "file123", 0, 0, 0644, "/files/file123".getBytes(Charsets.UTF_8));
+        _fs.createLink(linkBase, "file123", 0, 0, 0644, "/files/file123".getBytes(UTF_8));
         _fs.remove("/links/file123");
 
         assertTrue("original file is gone!", fileInode.exists());
@@ -1107,7 +1106,7 @@ public class BasicTest extends ChimeraTestCaseHelper {
     @Test(expected = InvalidArgumentChimeraException.class)
     public void testSetSizeOnNonFile() throws Exception {
         FsInode dir = _rootInode.mkdir("dir1");
-        FsInode link = _rootInode.createLink("link1", 1, 1, 0777, "dir1".getBytes(StandardCharsets.UTF_8));
+        FsInode link = _rootInode.createLink("link1", 1, 1, 0777, "dir1".getBytes(UTF_8));
         Stat stat = new Stat();
         stat.setSize(1);
         link.setStat(stat);
@@ -1195,7 +1194,7 @@ public class BasicTest extends ChimeraTestCaseHelper {
         _fs.createTag(top, "aTag");
 
         FsInode tagInode = new FsInode_TAG(_fs, top.ino(), "aTag");
-        byte[] data = "data".getBytes(StandardCharsets.UTF_8);
+        byte[] data = "data".getBytes(UTF_8);
         tagInode.write(0, data, 0, data.length);
 
         long tagid = tagInode.stat().getIno();
@@ -1279,7 +1278,7 @@ public class BasicTest extends ChimeraTestCaseHelper {
         FsInode inode = _fs.createFile(dir, "aFile");
 
         String key = "attr1";
-        byte[] value = "cat".getBytes(StandardCharsets.UTF_8);
+        byte[] value = "cat".getBytes(UTF_8);
         _fs.setXattr(inode, key, value, SetXattrMode.CREATE);
         byte[] result = _fs.getXattr(inode, key);
 
@@ -1293,7 +1292,7 @@ public class BasicTest extends ChimeraTestCaseHelper {
         FsInode inode = _fs.createFile(dir, "aFile");
 
         String key = "attr1";
-        byte[] value = "cat".getBytes(StandardCharsets.UTF_8);
+        byte[] value = "cat".getBytes(UTF_8);
         _fs.setXattr(inode, key, value, SetXattrMode.CREATE);
         _fs.setXattr(inode, key, value, SetXattrMode.CREATE);
     }
@@ -1305,7 +1304,7 @@ public class BasicTest extends ChimeraTestCaseHelper {
         FsInode inode = _fs.createFile(dir, "aFile");
 
         String key = "attr1";
-        byte[] value = "cat".getBytes(StandardCharsets.UTF_8);
+        byte[] value = "cat".getBytes(UTF_8);
         _fs.setXattr(inode, key, value, SetXattrMode.REPLACE);
     }
 
@@ -1316,8 +1315,8 @@ public class BasicTest extends ChimeraTestCaseHelper {
         FsInode inode = _fs.createFile(dir, "aFile");
 
         String key = "attr1";
-        byte[] value1 = "cat".getBytes(StandardCharsets.UTF_8);
-        byte[] value2 = "cat2".getBytes(StandardCharsets.UTF_8);
+        byte[] value1 = "cat".getBytes(UTF_8);
+        byte[] value2 = "cat2".getBytes(UTF_8);
         _fs.setXattr(inode, key, value1, SetXattrMode.CREATE);
         _fs.setXattr(inode, key, value2, SetXattrMode.REPLACE);
         byte[] result = _fs.getXattr(inode, key);
@@ -1332,8 +1331,8 @@ public class BasicTest extends ChimeraTestCaseHelper {
         FsInode inode = _fs.createFile(dir, "aFile");
 
         String key = "attr1";
-        byte[] value1 = "cat".getBytes(StandardCharsets.UTF_8);
-        byte[] value2 = "cat2".getBytes(StandardCharsets.UTF_8);
+        byte[] value1 = "cat".getBytes(UTF_8);
+        byte[] value2 = "cat2".getBytes(UTF_8);
         _fs.setXattr(inode, key, value1, SetXattrMode.EITHER);
         byte[] result = _fs.getXattr(inode, key);
 
@@ -1372,7 +1371,7 @@ public class BasicTest extends ChimeraTestCaseHelper {
         FsInode inode = _fs.createFile(dir, "aFile");
 
         String key = "attr1";
-        byte[] value = "cat".getBytes(StandardCharsets.UTF_8);
+        byte[] value = "cat".getBytes(UTF_8);
         _fs.setXattr(inode, key, value, SetXattrMode.CREATE);
 
         Collection<String> xattrs = _fs.listXattrs(inode);
@@ -1395,7 +1394,7 @@ public class BasicTest extends ChimeraTestCaseHelper {
         FsInode dir = _fs.mkdir("/test");
         FsInode inode = _fs.createFile(dir, "aFile");
         String key = "attr1";
-        byte[] value = "cat".getBytes(StandardCharsets.UTF_8);
+        byte[] value = "cat".getBytes(UTF_8);
         _fs.setXattr(inode, key, value, SetXattrMode.CREATE);
         _fs.removeXattr(inode, key);
     }
